# RUDP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RUDP  RUDP.cbp  cmake_install.cmake  compileProto.sh
Core/UDP/: Socket.h
codeStyle/: IFMO _OS.xml
proto/Messages/: ReliableMessage.proto  StringMessage.proto
src/: main.cpp
src/Core/UDP/: IPTarget.cpp  IPTarget.h  Socket.cpp  Socket.h
src/Core/UDP/Connection/: UDPConnection.cpp  UDPConnection.h  UDPMessage.cpp  UDPMessage.h
src/Core/UDP/Connection/Base/: ConnectionBase.h
src/Core/UDP/Connection/Reliability/: ReliableConnection.h
src/Core/UDP/Connection/Unreliable/: UDPConnection.h
src/Core/UDP/FakeSockets/: FakeMessage.cpp  FakeMessage.h  FakeNetwork.cpp  FakeNetwork.h  FakeSocket.cpp  FakeSocket.h
src/Core/UDP/Sockets/: Socket.cpp  Socket.h  SocketBase.h
src/Messages/: ReliableMessage.pb.cc  ReliableMessage.pb.h  StringMessage.pb.cc  StringMessage.pb.h
